1998-12-12  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* main.c: include <unistd.h> (basename under Linux).

1998-12-10  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* write_afm.c (write_afm), open_font.c (open_font), * t42.h: added
	ascender and descender.

	* write_t42.c (write_strdef): omit FontInfo entries if string is
	NULL.

	* open_font.c (open_font): calculate weight from OS/2
	usWeightClass.

	* main.c: declare basename only if missing.
